--- a/sma.html
+++ b/sma.html
@@ -76,6 +76,8 @@
     <!-- Header End -->
 
     <!-- slidder banneer -->
+    <br><br><br>
+    <i class="fa fa-rebel" aria-hidden="true"></i>
     <div class="carousel slide" data-bs-ride="carousel" id="z">
 
         <div class="carousel-indicators">
@@ -92,7 +94,7 @@
                     <p>SMA was established in 2012 having Office at Shivpuir, Mp(India). Since then we have
                         been working as consultants for Electrical & Security systems. We can also take MEP work to
                         provide client one point solution for MEP Services.</p>
-                    <button class="btn btn-danger text-white">Read More</button>
+                    <button class="btn btn-danger text-white" style="margin-bottom: 60px;">Read More</button>
                 </div>
             </div>
             <div class="carousel-item ">
@@ -103,7 +105,7 @@
                     <p>SMA was established in 2012 having Office at Shivpuir, Mp(India). Since then we have
                         been working as consultants for Electrical & Security systems. We can also take MEP work to
                         provide client one point solution for MEP Services</p>
-                    <button class="btn btn-danger text-white">Read More</button>
+                    <button class="btn btn-danger text-white" style="margin-bottom: 60px;">Read More</button>
                 </div>
             </div>
         </div><!--carousel-inner end-->
