--- a/sma.html
+++ b/sma.html
@@ -62,11 +62,11 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link ">Home</a>
+                            <a href="sma.html" class="nav-item nav-link ">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="service.html" class="nav-item nav-link">Services</a>
-                            <a href="log.html" class="nav-item nav-link">Energy audit</a>
-                            <a href="log.html" class="nav-item nav-link">Contact</a>
+                            <a href="services.html" class="nav-item nav-link">Services</a>
+                            <a href="energy audit.html" class="nav-item nav-link">Energy audit</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
                 </nav>
