--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap"
+        rel="stylesheet">
+
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
     <style>
         /*** Navbar ***/
 
@@ -90,7 +110,7 @@
     <div class="container-fluid fixed-top px-0 " style="background-color:#2C3568; ">
         <div class="row gx-0">
             <div class="col-lg-3 d-none d-lg-block">
-                <a href="index.html"
+                <a href="sma.html"
                     class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
                     <h1 class="m-0  text-uppercase" style="color: #EB4660;">SMA</h1>
                 </a>
@@ -118,7 +138,7 @@
                     </div>
                 </div>
                 <nav class="navbar navbar-expand-lg navbar-dark p-3 p-lg-0">
-                    <a href="index.html" class="navbar-brand d-block d-lg-none">
+                    <a href="sma.html" class="navbar-brand d-block d-lg-none">
                         <h1 class="m-0 text-primary text-uppercase">SMA</h1>
                     </a>
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
@@ -127,18 +147,107 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link ">Home</a>
+                            <a href="sma.html" class="nav-item nav-link ">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="service.html" class="nav-item nav-link">Services</a>
-                            <a href="log.html" class="nav-item nav-link">Energy audit</a>
-                            <a href="log.html" class="nav-item nav-link">Contact</a>
+                            <a href="services.html" class="nav-item nav-link">Services</a>
+                            <a href="energy audit.html" class="nav-item nav-link">Energy audit</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
                 </nav>
             </div>
         </div>
-    </div>
+    </div><br><br><br>
     <!-- Header End -->
+
+    <!-- banner start  -->
+    <div>
+        <img style="width: 100%; height: 250px; margin-top: 40px;" src="img/images (1).jpeg" alt="">
+      
+        <div style="position: relative; top: -160px; margin-left: 150px;">
+            <h2 style="color: #fff;">CONTACT US</h2>
+            <button class="btn btn-primary py-md-3 px-md-4 me-4">HOME</button>
+            <button class="btn btn-primary py-md-3 px-md-4 me-4"> Contact</button>
+        </div>
+
+    </div>
+    <!-- banner end -->
+
+
+    <!-- Contact Start -->
+    <div class="container-fluid py-5">
+        <div class="container">
+            <div class="mx-auto text-center mb-5" style="max-width: 500px;">
+                <h4 class="text-uppercase" style="color: #e88f2a;">Contact Us</h4>
+                <h1 class="display-5">Please Feel Free To Contact Us</h1>
+            </div>
+            <div class="row g-0">
+                <div class="col-lg-7">
+                    <div class="bg-primary h-100 p-5">
+                        <form>
+                            <div class="row g-3">
+                                <div class="col-6">
+                                    <input type="text" class="form-control bg-light border-0 px-4"
+                                        placeholder="Your Name" style="height: 55px;">
+                                </div>
+                                <div class="col-6">
+                                    <input type="email" class="form-control bg-light border-0 px-4"
+                                        placeholder="Your Email" style="height: 55px;">
+                                </div>
+                                <div class="col-12">
+                                    <input type="text" class="form-control bg-light border-0 px-4" placeholder="Subject"
+                                        style="height: 55px;">
+                                </div>
+                                <div class="col-12">
+                                    <textarea class="form-control bg-light border-0 px-4 py-3" rows="2"
+                                        placeholder="Message"></textarea>
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn btn-secondary w-100 py-3" type="submit">Send Message</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="bg-secondary h-100 p-5">
+                        <h2 class="text-white mb-4">Get In Touch</h2>
+                        <div class="d-flex mb-4">
+                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
+                                style="width: 60px; height: 60px;">
+                                <i class="bi bi-geo-alt fs-4 text-white"></i>
+                            </div>
+                            <div class="ps-3">
+                                <h5 class="text-white">Our Office</h5>
+                                <span class="text-white"> 18 colony devi puram colony shivpuri</span>
+                            </div>
+                        </div>
+                        <div class="d-flex mb-4">
+                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
+                                style="width: 60px; height: 60px;">
+                                <i class="bi bi-envelope-open fs-4 text-white"></i>
+                            </div>
+                            <div class="ps-3">
+                                <h5 class="text-white">Email Us</h5>
+                                <span class="text-white">adiviyanshagrawal@gmail.com</span>
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
+                                style="width: 60px; height: 60px;">
+                                <i class="bi bi-phone-vibrate fs-4 text-white"></i>
+                            </div>
+                            <div class="ps-3">
+                                <h5 class="text-white">Call Us</h5>
+                                <span class="text-white">+91 9407089248</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Contact End -->
 
 
     <footer>
