--- a/energy audit.html
+++ b/energy audit.html
@@ -85,12 +85,43 @@
 </head>
 
 <body>
+     <!-- Topbar Start -->
+     <div class="container-fluid px-0 d-none d-lg-block">
+        <div class="row gx-0">
+            <div class="col-lg-4 text-center bg-secondary py-3">
+                <div class="d-inline-flex align-items-center justify-content-center">
+                    <i class="bi bi-envelope fs-1 text-primary me-3"></i>
+                    <div class="text-start">
+                        <h6 class="text-uppercase mb-1">Email Us</h6>
+                        <span>info@example.com</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 text-center bg-primary border-inner py-3">
+                <div class="d-inline-flex align-items-center justify-content-center">
+                    <a href="index.html" class="navbar-brand">
+                        <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 text-center bg-secondary py-3">
+                <div class="d-inline-flex align-items-center justify-content-center">
+                    <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
+                    <div class="text-start">
+                        <h6 class="text-uppercase mb-1">Call Us</h6>
+                        <span>+012 345 6789</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Topbar End -->
 
     <!-- Header Start -->
     <div class="container-fluid fixed-top px-0 " style="background-color:#2C3568; ">
         <div class="row gx-0">
             <div class="col-lg-3 d-none d-lg-block">
-                <a href="index.html"
+                <a href="sma.html"
                     class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
                     <h1 class="m-0  text-uppercase" style="color: #EB4660;">SMA</h1>
                 </a>
@@ -118,7 +149,7 @@
                     </div>
                 </div>
                 <nav class="navbar navbar-expand-lg navbar-dark p-3 p-lg-0">
-                    <a href="index.html" class="navbar-brand d-block d-lg-none">
+                    <a href="sma.html" class="navbar-brand d-block d-lg-none">
                         <h1 class="m-0 text-primary text-uppercase">SMA</h1>
                     </a>
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
@@ -127,11 +158,11 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link ">Home</a>
+                            <a href="sma.html" class="nav-item nav-link ">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="service.html" class="nav-item nav-link">Services</a>
-                            <a href="log.html" class="nav-item nav-link">Energy audit</a>
-                            <a href="log.html" class="nav-item nav-link">Contact</a>
+                            <a href="services.html" class="nav-item nav-link">Services</a>
+                            <a href="energy audit.html" class="nav-item nav-link">Energy audit</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
                 </nav>
@@ -139,6 +170,19 @@
         </div>
     </div>
     <!-- Header End -->
+
+    <!-- banner start  -->
+    <div>
+        <img style="width: 100%; height: 250px; margin-top: 40px;" src="img/images (1).jpeg" alt="">
+      
+        <div style="position: relative; top: -160px; margin-left: 150px;">
+            <h2 style="color: #fff;">CONTACT US</h2>
+            <button class="btn btn-primary py-md-3 px-md-4 me-4">HOME</button>
+            <button class="btn btn-primary py-md-3 px-md-4 me-4"> Contact</button>
+        </div>
+
+    </div>
+    <!-- banner end -->
 
 
     <footer>
