--- a/sma.html
+++ b/sma.html
@@ -21,11 +21,12 @@
 </head>
 
 <body>
+    
     <!-- Header Start -->
     <div class="container-fluid fixed-top px-0 " style="background-color:#2C3568; ">
         <div class="row gx-0">
             <div class="col-lg-3 d-none d-lg-block">
-                <a href="index.html"
+                <a href="sma.html"
                     class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
                     <h1 class="m-0  text-uppercase" style="color: #EB4660;">SMA</h1>
                 </a>
@@ -53,7 +54,7 @@
                     </div>
                 </div>
                 <nav class="navbar navbar-expand-lg navbar-dark p-3 p-lg-0">
-                    <a href="index.html" class="navbar-brand d-block d-lg-none">
+                    <a href="sma.html" class="navbar-brand d-block d-lg-none">
                         <h1 class="m-0 text-primary text-uppercase">SMA</h1>
                     </a>
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
